[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/awesome_splash/core/AspectNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/demo_collection/demo1/splash_screen.gd" type="Script" id=2]
[ext_resource path="res://src/demo_collection/demo1/logo_godot.png" type="Texture" id=3]

[node name="AweSomeSplash" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.941176, 0.941176, 0.941176, 0.941176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectNode" parent="." instance=ExtResource( 1 )]

[node name="OutlineFrame" parent="AspectNode" index="0"]
margin_right = 1400.0
margin_bottom = 1400.0

[node name="Logo" type="Sprite" parent="AspectNode"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 236, 78, 552, 522 )

[node name="InfoNode" type="Sprite" parent="AspectNode"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 161, 970, 708, 137 )

[node name="GodotTitle" type="Node2D" parent="AspectNode"]
position = Vector2( 737.861, 757.042 )
scale = Vector2( 0.75, 0.75 )

[node name="T" type="Sprite" parent="AspectNode/GodotTitle"]
show_behind_parent = true
position = Vector2( 376.965, 100 )
texture = ExtResource( 3 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 808, 742, 138, 198 )

[node name="O2" type="Sprite" parent="AspectNode/GodotTitle"]
show_behind_parent = true
position = Vector2( 192.104, 100 )
texture = ExtResource( 3 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 623, 740, 178, 201 )

[node name="D" type="Sprite" parent="AspectNode/GodotTitle"]
show_behind_parent = true
position = Vector2( 0.0770874, 100 )
texture = ExtResource( 3 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 454, 742, 151, 197 )

[node name="O" type="Sprite" parent="AspectNode/GodotTitle"]
show_behind_parent = true
position = Vector2( -205.019, 100 )
texture = ExtResource( 3 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 252, 740, 179, 201 )

[node name="G" type="Sprite" parent="AspectNode/GodotTitle"]
show_behind_parent = true
position = Vector2( -404.322, 99.9999 )
texture = ExtResource( 3 )
offset = Vector2( 0, -100 )
region_enabled = true
region_rect = Rect2( 78, 740, 154, 201 )

[editable path="AspectNode"]
